# tap-bigquery

./: .gitignore  README.md  meltano.yml  pyproject.toml
.github/workflows/: test.yml
tap_bigquery/: __init__.py  __main__.py  client.py  client_test.py  connector.py  tap.py
tests/: __init__.py  conftest.py  test_client.py  test_core.py
tests/utils/: mockinspector.py
