[tool.poetry]
name = "meltanolabs-tap-bigquery"
version = "0.0.1"
description = "`tap-bigquery` is a Singer tap for BigQuery, built with the Meltano Singer SDK."
readme = "README.md"
authors = ["Pat Nadolny <firstname.lastname@example.com>"]
keywords = [
    "ELT",
    "BigQuery",
]
packages = [
    { include = "tap_bigquery" },
]

[tool.poetry.dependencies]
python = ">=3.10,<3.11" # we can ensure a much stricter version range than the original we forked from
fs-s3fs = { version = "^1.1.1", optional = true }
sqlalchemy-bigquery = "^1.8.0"
google-cloud-bigquery-storage = "^2.24.0"

# our fork, which implements a drastic parallelism improvement to introspection
singer-sdk = {git = "ssh://git@github.com/akkio-inc/singer-sdk", rev = "cb629da23dfc8da2f394a3f3047d88eba59a4b3a"}
pyarrow = "^15.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
snakeviz = "^2.2.0"
ruff = "^0.1.14"
mypy = "^1.8.0"
sqlalchemy-stubs = "^0.4"
libcst-mypy = "^0.1.0"

[tool.poetry.extras]
s3 = ["fs-s3fs"]

[tool.mypy]
python_version = "3.10"
exclude = "venv|.venv|env|generated|.mypy_cache|.ruff_cache|.cache"
follow_imports = "silent"
plugins = "sqlmypy"


[tool.ruff]
select = ["ALL"]
src = ["tap_bigquery"]
target-version = "py310"

[build-system]
requires = ["poetry-core>=1.0.8"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
# CLI declaration
tap-bigquery = 'tap_bigquery.tap:TapBigQuery.cli'
