[tool.poetry]
name = "tap-bigquery"
version = "0.1.0"
description = "`tap-bigquery` is a Singer tap for BigQuery, built with the Meltano Singer SDK."
readme = "README.md"
authors = ["Pat Nadolny <firstname.lastname@example.com>", "Aaron Phethean <aphethean@matatika.com>"]
keywords = [
    "ELT",
    "BigQuery",
]
packages = [
    { include = "tap_bigquery" },
]

[tool.poetry.dependencies]
python = ">=3.8,<3.13"
importlib-resources = { version = "==6.4.*", python = "<3.9" }
singer-sdk = "^0.39.1"
fs-s3fs = { version = "^1.1.1", optional = true }
sqlalchemy-bigquery = "^1.8.0"
google-cloud-storage = "^2.18.2"
google-cloud-bigquery = "^3.25.0"
fsspec = {extras = ["gs"], version = "^2024.9.0"}

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
singer-sdk = { version="^0.39.1", extras = ["testing"] }

[tool.poetry.extras]
s3 = ["fs-s3fs"]

[tool.mypy]
python_version = "3.9"
warn_unused_configs = true
plugins = "sqlmypy"

[tool.ruff]
ignore = [
    "ANN101",  # missing-type-self
    "ANN102",  # missing-type-cls
]
select = ["ALL"]
src = ["tap_bigquery"]
target-version = "py37"


[tool.ruff.flake8-annotations]
allow-star-arg-any = true

[tool.ruff.isort]
known-first-party = ["tap_bigquery"]

[tool.ruff.pydocstyle]
convention = "google"

[build-system]
requires = ["poetry-core>=1.0.8"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
# CLI declaration
tap-bigquery = 'tap_bigquery.tap:TapBigQuery.cli'

